fix(ui): fix broken layouts
ORB-70

--- a/vyne-query-service/src/main/web/src/app/header-component-layout/header-component-layout.component.scss
+++ b/vyne-query-service/src/main/web/src/app/header-component-layout/header-component-layout.component.scss
@@ -50,5 +50,6 @@
     // Note: Scrollbars still don't feel consistent across the app,
     // but deferring that for now.
     display: flex;
+    flex-direction: column;
   }
 }
